--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,7 +1,16 @@
 body {
-	background-image: url('/img/pittsburgh.jpg');
+/*	background-image: url('/img/pittsburgh.jpg');
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-size: 100%;*/
+    margin: 0;
+}
+.parallax{
+    background-image: url('/img/pittsburgh.jpg');
+    min-height: 800px;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 .intro {
 	float: left;
@@ -32,12 +41,23 @@ body {
 	margin-top: 3rem;
 }
 
-.nav-bar button {
-	margin-right: 7rem;
+.nav-bar a {
+	margin-right: 5rem;
     font-size: 2rem;
     background-color: Transparent;
     color: white;
-    border-radius: 20%;
+    border: none;
+    text-decoration: none;
+}
+a:hover {
+
+    text-decoration: underline;
+
+}
+
+.nav-bar a:focus {
+    outline: none;
+    text-decoration: none;
 }
 
 .nav-bar input {
@@ -48,18 +68,101 @@ body {
     border-radius: 20%;
 }
 
-#about {
-	width: 100px;
-    height: 100px;
+.about {
+	width: 100%;
+    height: 50rem;
 
     position: absolute;
     top:0;
     bottom: 0;
     left: 0;
     right: 0;
+    margin-top: 50rem;
+}
 
-    margin: auto;
+.about h2 {
+    font-size: -webkit-xxx-large;
+    text-align: center;
+}
+
+.about_img {
+    text-align: center;
+}
+
+.about_img  img{
+    height: 10rem;
+    border-radius: 50%;
+    /*background-image: url('/img/me.jpg');*/
+    /*border-radius: 50%;*/
+}
+
+.about_text p {
+    margin-left: 20rem;
+    margin-right: 20rem;
+    font-family: sans-serif;
+    font-size: 20px;
+}
+
+h2:after {
+    display: block;
+    height: 2px;
+    content: " ";
+    width: 100px;
+    margin: 0 auto;
+    margin-top: 20px;
+    background-color: #6fb2c2;
 }
 
 
 
+
+section {
+    background-color: #F0EAD6;
+    background-size: 100%;
+}
+
+.blog {
+    background-color: #F0EAD6;
+    background-size: 100%;
+    width: 100%;
+    height: 50rem;
+}
+
+.blog h1 {
+    font-family: sans-serif;
+    margin: 0;
+    text-align: center;
+}
+
+.blog h3 {
+    font-family: sans-serif;
+    margin-left: 3rem;
+}
+
+.blog p {
+    font-family: sans-serif;
+    margin-left: 3rem;
+    margin-right: 3rem;
+}
+
+.blog_home{
+    margin-left: 42rem;
+    text-decoration: none;
+    font-size: 2rem;
+}
+
+.social-icons {
+    padding-top: 50rem;
+    background: white;
+}
+
+.icon {
+    height: 60px;
+    margin-left: 1rem;
+    margin-right: 1rem;
+
+}
+
+footer table {
+    margin: auto;
+}
