--- a/views/home.erb
+++ b/views/home.erb
@@ -1,14 +1,41 @@
-<div>
-	<div class='intro'>
-		<p>Hello, I am <span>Joshua McNett</span></p>
-		<p id='intro-about'>I'm a software developer at Mined Minds. I love this new career path of mine. I get great enjoyment from developing website's and application's.</p>
+<div class='parallax'>
+	<div>
+		<div class='intro'>
+			<p>Hello, I am <span>Joshua McNett</span></p>
+			<p id='intro-about'>I'm a software developer at Mined Minds. I love this new career path of mine. I get great enjoyment from developing website's and application's.</p>
+		</div>
+		<div class='nav-bar'>
+			<a class='btn-2' id='about-btn' href="#about">About</a>
+			<a class='btn-2' id='skills-btn'>Skills</a>
+			<a class='btn-2' id='portfolio-btn'>Portfolio</a>
+			<a class='btn-2' id='blog' href="http://localhost:4567/blog">Blog</a>
+		</div>
 	</div>
-	<div class='nav-bar'>
-		<button class='btn-2' id='about-btn' onclick='show("about")'>About</button>
-		<button class='btn-2' id='skills-btn' onclick='show("skills")'>Skills</button>
-		<button class='btn-2' id='portfolio-btn' onclick='show("portfolio")'>Portfolio</button>
+
+<section id='about' class='about'>
+	<h2>About Me</h2>
+	<div class="about_img">
+		<img src="/img/me.jpg">
 	</div>
+	<div class='about_text'>
+		<p>I have lived in the Waynesburg, PA all my life. I had always had an intrest in computers and electronic growing up. Though i never turned this passion into a career I always had a love for it. After highschool I had went to work in the coal mines where I had a career for 9 years. I enjoyed my career but with a market change from coal to cleaner energy myself and many others had lost our great jobs.
+		</p>
+		<p>After the loss of my career of 9 years i did not trust the industry anymore. I knew i needed to find a new career path. That is when I made the decision to join Mined Minds software development bootcamp in August of 2016 for there 16 week course. Throughout the bootcamp i had learned how to build amazing webpages and web-apps using Ruby, HTML, CSS, and SQL.
+		</p>
+		<p>I am now proud to say after the hard work put in during the bootcamp I now am a software developer for Mined Minds. This new career path was the best choice I have made. With every new day I find myself still learning and a passion to want to expand my knowledge.
+		</p>
+		
+	</div>
+</section>
 </div>
-<div id='about' style="display: none;">
-	<h5>HELLO WORLD</h5>
-</div>
+<footer class='social-icons'>
+	<div class='icons-row'>
+	<table>
+	<tr>
+		<td><a href='https://www.facebook.com/josh.mcnett' target="_blank"><img class='icon' src='/img/facebook.png'></a></td>
+		<td><img class='icon' src='/img/linkedin.png'></td>
+		<td><img class='icon' src='/img/email.png'></td>
+		<td><a href='https://github.com/zerofalcon00' target='_blank'><img class='icon' src='/img/github.png'></a></td>
+
+</footer>
+
