--- a/views/home.erb
+++ b/views/home.erb
@@ -18,9 +18,9 @@
 		<img src="/img/me.jpg">
 	</div>
 	<div class='about_text'>
-		<p>I have lived in the Waynesburg, PA all my life. I had always had an intrest in computers and electronic growing up. Though i never turned this passion into a career I always had a love for it. After highschool I had went to work in the coal mines where I had a career for 9 years. I enjoyed my career but with a market change from coal to cleaner energy myself and many others had lost our great jobs.
+		<p>I have lived in the Waynesburg, PA all my life. I had always had an intrest in computers and electronic growing up. Though I never turned this passion into a career I always had a love for it. After highschool I had went to work in the coal mines where I had a career for 9 years. I enjoyed my career but with a market change from coal to cleaner energy myself and many others had lost our great jobs.
 		</p>
-		<p>After the loss of my career of 9 years i did not trust the industry anymore. I knew i needed to find a new career path. That is when I made the decision to join Mined Minds software development bootcamp in August of 2016 for there 16 week course. Throughout the bootcamp i had learned how to build amazing webpages and web-apps using Ruby, HTML, CSS, and SQL.
+		<p>After the loss of my career of 9 years I did not trust the industry anymore. I knew I needed to find a new career path. That is when I made the decision to join Mined Minds software development bootcamp in August of 2016 for there 16 week course. Throughout the bootcamp I had learned how to build amazing webpages and web-apps using Ruby, HTML, CSS, and SQL.
 		</p>
 		<p>I am now proud to say after the hard work put in during the bootcamp I now am a software developer for Mined Minds. This new career path was the best choice I have made. With every new day I find myself still learning and a passion to want to expand my knowledge.
 		</p>
