--- a/views/home.erb
+++ b/views/home.erb
@@ -8,7 +8,7 @@
 			<a class='btn-2' id='about-btn' href="#about">About</a>
 			<a class='btn-2' id='skills-btn'>Skills</a>
 			<a class='btn-2' id='portfolio-btn'>Portfolio</a>
-			<a class='btn-2' id='blog' href="http://localhost:4567/blog">Blog</a>
+			<a class='btn-2' id='blog' href="https://jmcnett.herokuapp.com/blog">Blog</a>
 		</div>
 	</div>
 
@@ -27,6 +27,28 @@
 		
 	</div>
 </section>
+<!-- <section id='skills' class='skills'>
+	<h2>Skills</h2>
+	<div class='skills-container'>
+		<div class='skill'>
+			<img src='/img/html.png'>
+			<p>HTML</p>
+		</div>
+		<div class='skill'>
+			<img src='/img/css.jpeg'>
+			<p>CSS</p>
+		</div>
+		<div class='skill'>
+			<img src='/img/ruby.png'>
+			<p>RUBY</p>
+		</div>
+		<div class='skill'>
+			<img src='/img/github2.png'>
+			<p>GITHUB</p>
+		</div>
+		
+	</div>	
+</section> -->
 </div>
 <footer class='social-icons'>
 	<div class='icons-row'>
