--- a/public/css/home.css
+++ b/public/css/home.css
@@ -176,3 +176,130 @@ section .about {
 footer table {
     margin: auto;
 }
+
+
+
+/*MEDIA QUERIES*/
+
+@media(min-width: 320px) {
+    .parallax {
+        background-image: url(/img/pittsburgh.jpg);
+        min-height: 1750px;
+        background-attachment: fixed;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+
+    .about {
+        width: 100%;
+        height: 110rem;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        margin-top: 110rem;
+    }
+
+    .intro {
+        float: left;
+        width: 48rem;
+    }
+
+    #intro-about {
+        font-size: 1.1rem;
+        width: 38rem;
+    }
+
+    .intro p {
+        font-family: sans-serif;
+        color: white;
+        font-size: 3rem;
+        padding-left: 3rem;
+        margin-bottom: 1rem;
+    }
+
+    .intro span {
+        font-family: fantasy;
+        font-size: 4rem;
+    }
+
+    .about_text p {
+        margin-left: 10rem;
+        margin-right: 10rem;
+        font-family: sans-serif;
+        font-size: 34px;
+    }
+
+    .about_img img {
+        height: 15rem;
+        border-radius: 50%;
+        background-image: url(/img/me.jpg); 
+        /* border-radius: 50%; */
+    }   
+
+    .about h2 {
+        font-size: 4rem;
+        text-align: center;
+    }
+
+    h2:after {
+        display: block;
+        height: 2px;
+        content: " ";
+        width: 175px;
+        margin: 0 auto;
+        margin-top: 20px;
+        background-color: #6fb2c2;
+        }
+
+
+    .social-icons {
+        padding-top: 104rem;
+        background: white;
+    }
+
+
+
+    .blog {
+        background-color: #F0EAD6;
+        background-size: 100%;
+        width: 100%;
+        height: 110rem;
+    }
+
+    .blog h1 {
+        font-family: sans-serif;
+        margin: 0;
+        text-align: center;
+        font-size: 3rem;
+        padding-top: 3rem;
+    }
+
+    .blog h3 {
+        font-family: sans-serif;
+        margin-left: 3rem;
+        font-size: 2rem;
+    }
+
+    .blog p {
+        font-family: sans-serif;
+        margin-left: 3rem;
+        margin-right: 3rem;
+        font-size: 2rem;
+    }
+
+    .course_route {
+        margin-bottom: 10rem;
+    }
+
+
+.blog_home {
+    margin-left: 25rem;
+    text-decoration: none;
+    font-size: 3rem;
+}
+
+
+}
