--- a/views/home.erb
+++ b/views/home.erb
@@ -10,7 +10,17 @@
 			<a class='btn-2' id='portfolio-btn'>Portfolio</a>
 			<a class='btn-2' id='blog' href="https://jmcnett.herokuapp.com/blog">Blog</a>
 		</div>
+		<button id='hamburger' class="hamburger" onclick="showMenu()">&#9776;</button>
 	</div>
+
+	<div class="menu" id='menu'>
+	  <ul>
+		<a class='menu_btn' onclick="showHamburger()" id='about-btn' href="#about">About</a>
+		<a class='menu_btn' onclick="showHamburger()" id='skills-btn'>Skills</a>
+		<a class='menu_btn' onclick="showHamburger()" id='portfolio-btn'>Portfolio</a>
+		<a class='menu_btn' onclick="showHamburger()" id='blog' href="https://jmcnett.herokuapp.com/blog">Blog</a>
+	  </ul>
+	</div> 
 
 <section id='about' class='about'>
 	<h2>About Me</h2>
