--- a/views/layout.erb
+++ b/views/layout.erb
@@ -11,4 +11,5 @@
 </body>
 <footer class='footer-container'>
     <script src="/js/home.js"></script>
+    <script src="jquery-3.2.1.min.js"></script>
 </footer>
