--- a/views/blog.erb
+++ b/views/blog.erb
@@ -1,9 +1,16 @@
 <div class='blog'>
-<h1>Welcome to my blog</h1>
+<h1>Just<span>MCNETT</span></h1>
 <h3>July 27, 2017</h3>
-<p>I have recently took a udemy course on learning SVG animation by Sam Billingham. I was really excited to take this course and learn some css animation. I have some experience in front end coding but feel that it is a weak spot in being a developer. This course was great to watch. I had learned alot of new things with css including animation. The course uses html, css and javascript as languages to create these animations. The course can be completed with Adobe illustrator or inkscape (which is free and open source) to create the svg, using a simple text editor like atom or sublime to open the svg image and gain access to the code and finally using codepen.io website to include the animation. He goes step by step on explaining how each step is done and explaining the css code needed for the animations. During this course he shows how to make animated logos, animating social icons, hand drawn text, using gradients over text and icons, and using masks. I would highly recommend this course to someone who like myself had zero knowledge of how to do any css animation.</p>
+<div id='svg_udemy' class='container'>
+	<h1>Intro to SVG animation</h1>
+	<p>I took a Udemy course to learn expand my css skills.<P>
+	<svg xmlns="http://www.w3.org/2000/svg" width="500" height="500" viewBox="0 0 500 500">
+  <path class="monkey" fill="#fff" stroke="red" d="M331 439.6H167.5L111 329.4v-50.2L61 227V112h56l133-51.6L380.5 112H439v115l-52.6 55.8v46.6L331 439.6zM179.3 425H319v-38H179.4v38zm-53.5-99l39 75.8V278L138 225.7V168l58.3-57.6 53 26.4 52.5-26.4L361 168v57.8L333.8 278v123.3l38-75.4V124L250 76.2l-124.2 48V326zm53.5 46.3H319v-90.7L249 258l-69.5 23.5v90.8zm69.5-129.8l74 24.8 23.6-45v-48l-47.3-46-49.5 25-50-25L153 174v48.4l23 45 73-24.7zm137.6-115.8v134.7l38-40.3v-94h-38zM75.6 221l35.5 37V126.7H76V221zm142.8 111.8l-25.8-26.6L203 296l26 26.5-10.6 10.3zm62.7 0l-10.4-10.2 25-26.6 10.7 10-25 26.7zm-50-101.5h-66v-67.6h66v67.6zm-51.4-14.7h37v-38.2h-37v38.2zM333.8 231h-66.4v-67.5h66.4V231zM282 216.5h37v-38.2h-37v38.2z"/>
+</svg>
+</div>
+<!-- <p>I have recently took a udemy course on learning SVG animation by Sam Billingham. I was really excited to take this course and learn some css animation. I have some experience in front end coding but feel that it is a weak spot in being a developer. This course was great to watch. I had learned alot of new things with css including animation. The course uses html, css and javascript as languages to create these animations. The course can be completed with Adobe illustrator or inkscape (which is free and open source) to create the svg, using a simple text editor like atom or sublime to open the svg image and gain access to the code and finally using codepen.io website to include the animation. He goes step by step on explaining how each step is done and explaining the css code needed for the animations. During this course he shows how to make animated logos, animating social icons, hand drawn text, using gradients over text and icons, and using masks. I would highly recommend this course to someone who like myself had zero knowledge of how to do any css animation.</p>
 <p class='course_route'>Click <a href='https://www.udemy.com/learn-svg-animation/' target="_blank">Here</a> to see an overview of the couse.</p>
 
 <a class='blog_home' href='https://jmcnett.herokuapp.com'>Home</a>
-	
+	 -->
 </div>
