blog route was wrong

--- a/views/home.erb
+++ b/views/home.erb
@@ -9,7 +9,7 @@
 			<a class='btn-2' id='skills-btn'>Skills</a>
 			<a class='btn-2' id='portfolio-btn'>Portfolio</a>
 			<!-- <a class='btn-2' id='blog' href="https://jmcnett.herokuapp.com/blog">Blog</a> -->
-			<a class='btn-2' id='blog' href="http://localhost:4567/blog">Blog</a>
+			<a class='btn-2' id='blog' href="http://jmcnett.herokuapp.com/blog">Blog</a>
 		</div>
 		<button id='hamburger' class="hamburger" onclick="showMenu()">&#9776;</button>
 	</div>
@@ -19,7 +19,7 @@
 		<a class='menu_btn' onclick="showHamburger()" id='about-btn' href="#about">About</a>
 		<a class='menu_btn' onclick="showHamburger()" id='skills-btn'>Skills</a>
 		<a class='menu_btn' onclick="showHamburger()" id='portfolio-btn'>Portfolio</a>
-		<a class='menu_btn' onclick="showHamburger()" id='blog' href="http://localhost:4567/blog">Blog</a>
+		<a class='menu_btn' onclick="showHamburger()" id='blog' href="http://jmcnett.herokuapp.com/blog">Blog</a>
 	  </ul>
 	</div> 
 
